tests/should-fail/rawcodes/rawcodelit-16.j
globals
    integer t = '\\\\ab'
endglobals